test/fail/repeated4.min
program
    string s;
    function forward number s string str; array arr done
start

end
